# e7_audio_logger

./: README.md  e7_audio_logger.cbuild-idx.yml  e7_audio_logger.cbuild-pack.yml  e7_audio_logger.csolution.yml
M55_HE/: .clangd  M55_HE.cproject.yml  main.c
M55_HE/RTE/Device/AE722F80F55D5LS_M55_HE/: RTE_Device.h  app_mem_regions.h.base@2.0.4  app_tz.h  core_config.h.base@2.0.4  dma_config.h  linker_ac6_mram.sct.base@2.0.4  linker_ac6_tcm.sct.base@2.0.4
M55_HE/RTE/_Debug_AE722F80F55D5LS/: RTE_Components.h
M55_HE/RTE/_Release_AE722F80F55D5LS/: RTE_Components.h
tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
tmp/M55_HE.Debug+AE722F80F55D5LS/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
tmp/M55_HE.Debug+AE722F80F55D5LS/src/M55_HE.Debug+AE722F80F55D5LS-stamp/: M55_HE.Debug+AE722F80F55D5LS-configure-.cmake  M55_HE.Debug+AE722F80F55D5LS-database-.cmake  M55_HE.Debug+AE722F80F55D5LS-source_dirinfo.txt
tmp/M55_HE.Debug+AE722F80F55D5LS/tmp/: M55_HE.Debug+AE722F80F55D5LS-cfgcmd.txt  M55_HE.Debug+AE722F80F55D5LS-mkdirs.cmake
